# swagger.json
@@ -337,13 +337,9 @@
                         "type": "string",
                         "example": "https://example.com/profile-photo.jpeg"
                       },
-                      "firstName": {
+                      "fullName": {
                         "type": "string",
-                        "example": "John"
-                      },
-                      "lastName": {
-                        "type": "string",
-                        "example": "Doe"
+                        "example": "John Doe"
                       },
                       "bootcamp": {
                         "type": "string",
